<resources>
    <string name="app_name">BarbrDo</string>
    <string name="network_service_message_title">Network connection</string>
    <string name="network_service_message">Make sure you\'re connected to a Wi-Fi or mobile network and try again.</string>
    <string name="ok">OK</string>
    <string name="cancel">CANCEL</string>
    <string name="discard">DISCARD</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="submit">Submit</string>
    <string name="forgot_password">forgot password?</string>
    <string name="operation_cancelled">Operation cancelled.</string>
    <string name="berlin_sans_fb_bold">Berlin_Sans_FB_Bold.ttf</string>
    <string name="berlin_sans_fb_regular">Berlin_Sans_FB_Regular.ttf</string>
    <string name="error_email_empty">Please enter email.</string>
    <string name="error_email_invalid">Please enter valid email.</string>
    <string name="error_empty_password">Please enter password.</string>
    <string name="error_password_length">Password must be of 6 characters.</string>
    <string name="error_first_name_empty">Please enter first name.</string>
    <string name="error_last_name_empty">Please enter last name.</string>
    <string name="error_password_match">Passwords doesn\'t match.</string>
    <string name="error_mobile_number_empty">Please enter mobile number.</string>
    <string name="error_mobile_licence_empty">Please enter licence number.</string>
    <string name="error_shop_name_empty">Please enter shop name.</string>
    <string name="error_address_empty">Please enter address.</string>
    <string name="error_city_empty">Please enter city.</string>
    <string name="error_state_empty">Please enter state.</string>
    <string name="error_zip_empty">Please enter zip code.</string>
    <string name="error_mobile_invalid">Please enter valid mobile number.</string>
    <string name="error_name_empty">Please enter name on card.</string>
    <string name="error_card_empty">Please enter card number.</string>
    <string name="error_expiry_empty">Please enter expiry date.</string>
    <string name="error_cvv_empty">Please enter CVV.</string>
    <string name="error_card_invalid">Please enter valid card number.</string>
    <string name="error_expiry_invalid">Please enter valid expiry date.</string>
    <string name="error_event_title_empty">Please enter event title.</string>
    <string name="work_in_progress">Work in progress</string>
    <string name="facebook_app_id">497909777242211</string>
    <string name="forgot_password_l">Forgot Password</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="customer">Customer</string>
    <string name="barber">Barber</string>
    <string name="barber_shop">Barber Shop</string>
    <string name="register">Register</string>
    <string name="activate_account">Account Activation</string>
    <string name="verify">Verify</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="home">Home</string>
    <string name="logout">Logout</string>
    <string name="gallery">Gallery</string>
    <string name="notifications">Notifications</string>
    <string name="exit">Exit</string>
    <string name="exit_application">Exit Application</string>
    <string name="upcoming">UPCOMING</string>
    <string name="completed">COMPLETED</string>
    <string name="do_you_really_want_to_logout_application">Do you really want to logout from the application?</string>
    <string name="login">LOGIN</string>
    <string name="register_c">REGISTER</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? Signup</string>
    <string name="a_temporary_password_has_been_sent_to_your_email_address">A temporary password has been\nsent to your email address.</string>
    <string name="signup">SIGNUP</string>
    <string name="already_have_an_account_login">Already have an account? Login</string>
    <string name="no_haircuts_scheduled">No Haircuts Scheduled</string>
    <string name="upcoming_appointment_detail">Upcoming Appointment Detail</string>
    <string name="appointment_booked">Appointment Booked</string>
    <string name="barber_shop_address">Barber Shop Address</string>
    <string name="add_to_calendar">Add to Calendar</string>
    <string name="view_on_map">View on Map</string>
    <string name="summary_of_services">Summary of Services</string>
    <string name="pay_now">Pay Now</string>
    <string name="your_barber">Your Barber</string>
    <string name="gallery_folder_name">BarbrDo</string>
    <string name="add_image">Add Image</string>
    <string name="take_picture">Take Picture</string>
    <string name="choose_from_gallery">Choose from Gallery</string>
    <string name="cancel_">Cancel</string>
    <string name="view_shops">VIEW SHOPS</string>
    <string name="view_barbers">VIEW BARBERS</string>
    <string name="search">Search</string>
    <string name="no_shops_could_be_found">No shops found</string>
    <string name="please_tap_back_again_to_exit">Please tap BACK again to exit</string>
    <string name="details">Details</string>
    <string name="book">Book</string>
    <string name="google_maps_key">AIzaSyDvdip8Rb5DveHCWWgVuGBMXqnzPn0ONL8</string>
    <string name="no_barbers_could_be_found">No barbers could be found</string>
    <string name="book_an_appointment">Book an Appointment</string>
    <string name="morning">Morning</string>
    <string name="afternoon">Afternoon</string>
    <string name="evening">Evening</string>
    <string name="next">Next</string>
    <string name="pay_later">Pay Later</string>
    <string name="cuts">Cuts</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="member_since">Member Since</string>
    <string name="photos">Photos</string>
    <string name="profile">Profile</string>
    <string name="my_profile">My Profile</string>
    <string name="edit">Edit</string>
    <string name="contact_barber">Contact Barber</string>
    <string name="go_home">Go Home</string>
    <string name="full_name">Full Name</string>
    <string name="overall_ratings">Overall Ratings</string>
    <string name="licence_number">License Number</string>
    <string name="shop_">shop</string>
    <string name="barber_">barber</string>
    <string name="customer_">customer</string>
    <string name="financial_center">Financial Center</string>
    <string name="manage_calendar">Manage Calendar</string>
    <string name="search_for_a_chair">Search for a Chair</string>
    <string name="manage_requests">Manage Requests</string>
    <string name="manage_services">Manage Services</string>
    <string name="invite_customer">Invite Customer</string>
    <string name="pending">PENDING</string>
    <string name="confirmed">CONFIRMED</string>
    <string name="request_appointment">Request Appointment</string>
    <string name="save">Save</string>
    <string name="pending_appointment_detail">Pending Appointment Details</string>
    <string name="reschedule">Reschedule</string>
    <string name="your_customer">Your Customer</string>
    <string name="confirm">Confirm</string>
    <string name="mark_as_complete">Mark as Complete</string>
    <string name="appointment_details">Appointment Details</string>
    <string name="which_shop_do_you_want_to_cut_at">Which shop do you want to cut at?</string>
    <string name="request">Request</string>
    <string name="available">available</string>
    <string name="chair_details">Chair Details</string>
    <string name="your_request_has_been_submitted">Your request has been submitted.</string>
    <string name="thank_you">Thank you</string>
    <string name="please_wait_for_confirmation">Please wait for confirmation.</string>
    <string name="pending_chair_request_details">Pending Chair Request Details</string>
    <string name="re_book">Re-book</string>
    <string name="customer_profile">Customer Profile</string>
    <string name="barber_profile">Barber Profile</string>
    <string name="rate_customer">Rate Customer</string>
    <string name="your_rating">Your Rating</string>
    <string name="completed_appointment_details">Completed Appointment Details</string>
    <string name="i_am_running_late_by">I am running late by</string>
    <string name="min">min</string>
    <string name="add_optional_message">Add optional message</string>
    <string name="send">Send</string>
    <string name="call_barber">Call Barber</string>
    <string name="can_we_move_the_appointment_back_by">Can we move the appointment back by</string>
    <string name="contact_shop">Contact Shop</string>
    <string name="cancel_request">Cancel Request</string>
    <string name="are_you_sure_you_want_to_cancel_request">Are you sure you want to cancel this request?</string>
    <string name="reschedule_appointment">Reschedule Appointment</string>
    <string name="are_you_sure_you_want_to_reschedule_appointment">Are you sure you want to reschedule this appointment?</string>
    <string name="these_shops_are_requesting_your_services">These Shops are Requesting Your Services</string>
    <string name="manage_my_services">Manage My Services</string>
    <string name="no_services_listed">No Services Listed</string>
    <string name="contact_customer">Contact Customer</string>
    <string name="view_daily_calendar">View Daily Calendar</string>
    <string name="contact_barbr_do_office">Contact BarbrDo Office</string>
    <string name="manage_chairs">Manage Chairs</string>
    <string name="what_day_are_you_looking_for">What day are you looking for?</string>
    <string name="type_message_here">Type message here...</string>
    <string name="search_radius">Search Radius</string>
    <string name="reviews">Reviews</string>
    <string name="delete">Delete</string>
    <string name="delete_image">Delete Image</string>
    <string name="are_you_sure_you_want_to_delete_this_image">Are you sure you want to delete this image?</string>
    <string name="shop_name">Shop Name</string>
    <string name="address">Address</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="manage">Manage</string>
    <string name="no_chairs_added">No Chairs Added</string>
    <string name="invite_customer_to_barbrdo">Invite Customer to BarbrDo</string>
    <string name="invite_barber_to_barbrdo">Invite Barber to BarbrDo</string>
    <string name="delete_service">Delete Service</string>
    <string name="are_you_sure_you_want_to_delete_service">Are you sure you want to delete this service?</string>
    <string name="confirm_appointment">Confirm Appointment</string>
    <string name="are_you_sure_you_want_to_confirm_appointment">Are you sure you want to confirm this appointment?</string>
    <string name="are_you_sure_you_want_to_complete_appointment">Are you sure you want to complete this appointment?</string>
    <string name="chair_split_shop_percentage">Chair Split - Shop Percentage</string>
    <string name="rent_chair_weekly_monthly">Rent Chair Weekly/Monthly</string>
    <string name="mark_chair_as_booked">Mark Chair as Booked</string>
    <string name="search_for_specific_barber">Search for Specific Barber</string>
    <string name="post_chair_to_all_barbers">Post Chair to all Barbers</string>
    <string name="search_for_barbers">Search for Barbers</string>
    <string name="remove_chair">Remove Chair</string>
    <string name="are_you_sure_you_want_to_remove_chair">Are you sure you want to remove this chair?</string>
    <string name="request_to_remove_barber">Request to Remove Barber</string>
    <string name="weekly">Weekly</string>
    <string name="monthly">Monthly</string>
    <string name="share">Share</string>
</resources>