<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingBottom="@dimen/margin_10dp"
            android:paddingLeft="@dimen/margin_30dp"
            android:paddingRight="@dimen/margin_30dp"
            android:paddingTop="@dimen/margin_60dp">

            <ImageView
                android:id="@+id/iv_logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/signup_logo" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/margin_20dp"
                android:orientation="horizontal"
                android:weightSum="3">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/margin_60dp"
                    android:layout_weight="1.5"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/iv_customer"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/customer_active" />

                    <com.barbrdo.app.customviews.TextViewRegular
                        android:id="@+id/tv_customer"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_2dp"
                        android:text="@string/customer"
                        android:textColor="@color/white"
                        android:textSize="@dimen/textsize_12sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.5"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/iv_barber"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/barber" />

                    <com.barbrdo.app.customviews.TextViewRegular
                        android:id="@+id/tv_barber"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_2dp"
                        android:text="@string/barber"
                        android:textColor="@color/text_gray"
                        android:textSize="@dimen/textsize_12sp" />

                </LinearLayout>

                <LinearLayout
                    android:visibility="gone"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/iv_barber_shop"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/barber" />

                    <com.barbrdo.app.customviews.TextViewRegular
                        android:id="@+id/tv_barber_shop"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_2dp"
                        android:gravity="center"
                        android:text="@string/barber_shop"
                        android:textColor="@color/text_gray"
                        android:textSize="@dimen/textsize_12sp" />

                </LinearLayout>

            </LinearLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_first_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_10dp"
                android:textColorHint="@color/text_gray"
                app:hintTextAppearance="@style/MyApp.TextInputLayout">

                <com.barbrdo.app.customviews.EditTextRegular
                    android:id="@+id/et_first_name"
                    style="@style/MyApp.EditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/username"
                    android:drawablePadding="@dimen/margin_10dp"
                    android:hint="@string/first_name"
                    android:inputType="textCapWords"
                    android:maxLength="30" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_last_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_10dp"
                android:textColorHint="@color/text_gray"
                app:hintTextAppearance="@style/MyApp.TextInputLayout">

                <com.barbrdo.app.customviews.EditTextRegular
                    android:id="@+id/et_last_name"
                    style="@style/MyApp.EditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/username"
                    android:drawablePadding="@dimen/margin_10dp"
                    android:hint="@string/last_name"
                    android:inputType="textCapWords"
                    android:maxLength="30" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_10dp"
                android:textColorHint="@color/text_gray"
                app:hintTextAppearance="@style/MyApp.TextInputLayout">

                <com.barbrdo.app.customviews.EditTextRegular
                    android:id="@+id/et_email"
                    style="@style/MyApp.EditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/username"
                    android:drawablePadding="@dimen/margin_10dp"
                    android:hint="@string/email_address"
                    android:inputType="textEmailAddress"
                    android:maxLength="50" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/text_gray"
                app:hintTextAppearance="@style/MyApp.TextInputLayout">

                <com.barbrdo.app.customviews.EditTextRegular
                    android:id="@+id/et_password"
                    style="@style/MyApp.EditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/password"
                    android:drawablePadding="@dimen/margin_10dp"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:maxLength="50" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/text_gray"
                app:hintTextAppearance="@style/MyApp.TextInputLayout">

                <com.barbrdo.app.customviews.EditTextRegular
                    android:id="@+id/et_confirm_password"
                    style="@style/MyApp.EditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/password"
                    android:drawablePadding="@dimen/margin_10dp"
                    android:hint="@string/confirm_password"
                    android:inputType="textPassword"
                    android:maxLength="50" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_confirm_mobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/text_gray"
                app:hintTextAppearance="@style/MyApp.TextInputLayout">

                <com.barbrdo.app.customviews.EditTextRegular
                    android:id="@+id/et_mobile_number"
                    style="@style/MyApp.EditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/mob"
                    android:drawablePadding="@dimen/margin_10dp"
                    android:hint="@string/mobile_number"
                    android:inputType="number"
                    android:maxLength="14" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_licence"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/text_gray"
                android:visibility="gone"
                app:hintTextAppearance="@style/MyApp.TextInputLayout">

                <com.barbrdo.app.customviews.EditTextRegular
                    android:id="@+id/et_licence_number"
                    style="@style/MyApp.EditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/license_icon"
                    android:drawablePadding="@dimen/margin_7dp"
                    android:hint="@string/licence_number"
                    android:inputType="textCapCharacters"
                    android:maxLength="15" />

            </android.support.design.widget.TextInputLayout>

            <com.barbrdo.app.customviews.ButtonRegular
                android:id="@+id/btn_register"
                style="@style/MyApp.ButtonRed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_20dp"
                android:focusableInTouchMode="false"
                android:onClick="signUpUser"
                android:text="@string/signup" />

            <com.barbrdo.app.customviews.TextViewRegular
                android:id="@+id/tv_sign_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_forgot_password"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/margin_5dp"
                android:gravity="center"
                android:onClick="login"
                android:padding="@dimen/margin_15dp"
                android:text="@string/already_have_an_account_login"
                android:textColor="@color/white"
                android:textSize="@dimen/textsize_16sp" />

        </LinearLayout>
    </ScrollView>

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar_transparent" />
</RelativeLayout>
