<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar_transparent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="@dimen/margin_10dp"
            android:paddingLeft="@dimen/margin_30dp"
            android:paddingRight="@dimen/margin_30dp">

            <ImageView
                android:id="@+id/iv_logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:src="@drawable/splash_logo" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/iv_logo"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/margin_15dp"
                android:textColorHint="@color/text_gray"
                app:hintTextAppearance="@style/MyApp.TextInputLayout">

                <com.barbrdo.app.customviews.EditTextRegular
                    android:id="@+id/et_email"
                    style="@style/MyApp.EditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_30dp"
                    android:drawableLeft="@drawable/username"
                    android:drawablePadding="@dimen/margin_10dp"
                    android:hint="@string/email_address"
                    android:inputType="textEmailAddress" />
            </android.support.design.widget.TextInputLayout>


            <com.barbrdo.app.customviews.ButtonRegular
                android:id="@+id/btn_forgot_password"
                style="@style/MyApp.ButtonRed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/input_layout_email"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/margin_20dp"
                android:focusableInTouchMode="false"
                android:onClick="forgotPassword"
                android:text="@string/forgot_password_l" />

            <LinearLayout
                android:id="@+id/ll_success"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:visibility="gone"
                android:layout_below="@+id/iv_logo"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/margin_50dp"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/forgot_msg" />

                <com.barbrdo.app.customviews.TextViewRegular
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/textsize_18sp"
                    android:textColor="@color/white"
                    android:gravity="center"
                    android:layout_marginTop="@dimen/margin_20dp"
                    android:text="@string/a_temporary_password_has_been_sent_to_your_email_address"/>

                <com.barbrdo.app.customviews.ButtonRegular
                    style="@style/MyApp.ButtonRed"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/input_layout_email"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="@dimen/margin_20dp"
                    android:focusableInTouchMode="false"
                    android:onClick="login"
                    android:text="@string/login" />

            </LinearLayout>


        </RelativeLayout>
    </ScrollView>
</RelativeLayout>
